--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -9,7 +9,7 @@
 <body>
 	<div id="wrapper">
 
-		<h1>INITIAL INDEX with Changes</h1>
+		<h1>INITIAL INDEX with Changes added</h1>
 		<div ng-view></div>
 
 	</div>
